Zero build failure with clang due to values not handled in switch

XMLWordPrintable

    • b20

        ```
        * For target hotspot_variant-zero_libjvm_objs_bytecodeInterpreter.o:
        /jdk/src/hotspot/share/interpreter/zero/bytecodeInterpreter.cpp:2971:13: error: 7 enumeration values not handled in switch: 'T_VOID', 'T_ADDRESS', 'T_NARROWOOP'... [-Werror,-Wswitch]
            switch (istate->method()->result_type()) {
                    ^
        /jdk/src/hotspot/share/interpreter/zero/bytecodeInterpreter.cpp:2971:13: note: add missing switch cases
            switch (istate->method()->result_type()) {
                    ^
        /jdk/src/hotspot/share/interpreter/zero/bytecodeInterpreter.cpp:2971:13: error: 7 enumeration values not handled in switch: 'T_VOID', 'T_ADDRESS', 'T_NARROWOOP'... [-Werror,-Wswitch]
            switch (istate->method()->result_type()) {
                    ^
        /jdk/src/hotspot/share/interpreter/zero/bytecodeInterpreter.cpp:2971:13: note: add missing switch cases
            switch (istate->method()->result_type()) {
                    ^
        /jdk/src/hotspot/share/interpreter/zero/bytecodeInterpreter.cpp:2971:13: error: 7 enumeration values not handled in switch: 'T_VOID', 'T_ADDRESS', 'T_NARROWOOP'... [-Werror,-Wswitch]
            switch (istate->method()->result_type()) {
                    ^
           ... (rest of output omitted)
        ```

        ```
        * For target hotspot_variant-zero_libjvm_objs_zeroInterpreter_zero.o:
        /jdk/src/hotspot/cpu/zero/zeroInterpreter_zero.cpp:615:11: error: 10 enumeration values not handled in switch: 'btos', 'ztos', 'ctos'... [-Werror,-Wswitch]
          switch (entry->flag_state()) {
                  ^
        /jdk/src/hotspot/cpu/zero/zeroInterpreter_zero.cpp:615:11: note: add missing switch cases
          switch (entry->flag_state()) {
                  ^
        1 error generated.
        ```

              Assignee:
              Jie Fu
              Reporter:
              Jie Fu
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: