8285342: Zero build failure with clang due to values not handled in switch

Backport-of: d84b9c54893dd33686d49755fca7a4b7f6a681c4